--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,10 @@
   },
   "rules": {
     "prettier/prettier": [
-      "error", { 
-        "singleQuote": true, 
-        "endOfLine": "auto" 
+      "error",
+      {
+        "singleQuote": true,
+        "endOfLine": "auto"
       }
     ],
     "@typescript-eslint/explicit-function-return-type": "off",
