--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
-  "author": "Asoalce (https://github.com/asolace)"
+  "author": "Asoalce (https://github.com/asolace)",
+  "devDependencies": {
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.8.1"
+  }
 }
