--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,7 @@
     "target": "es2018",
     "module": "esnext",
     "jsx": "preserve",
-    "lib": [
-      "dom", 
-      "dom.iterable", 
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "moduleResolution": "node"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
