--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-types": "tsc --pretty --noEmit",
+    "prettier-format": "prettier --write .",
+    "eslint-format": "eslint --fix . --ext ts --ext tsx --ext js ",
+    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -20,9 +25,12 @@
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
-  "author": "Asoalce (https://github.com/asolace)",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
     "prettier": "^2.8.1"
-  }
+  },
+  "author": "Asoalce (https://github.com/asolace)"
 }
