--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,19 @@
     "allowJs": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
+    "allowSyntheticDefaultImports": true,
+
     "noEmit": true,
-    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+
+    "preserveConstEnums": true,
+    "strictNullChecks": true,
     "isolatedModules": true,
     "resolveJsonModule": true,
     "pretty": true,
