feat: added jest testing and organize code structure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,13 @@
       "rules": {
         "@typescript-eslint/no-non-null-assertion": "off"
       }
+    },
+    {
+      "files": ["*.config.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off",
+        "no-undef": "off"
+      }
     }
   ],
   "settings": {
